# tst_tcicov

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE.txt  README.md  version.hpp.in
cmake/: GoogleTest.cmake.in  clang-format.cmake  doxygen.cmake  function.cmake  gtest.cmake  print.cmake  version.cmake
src/: CMakeLists.txt  factorials.hpp  sqrt.hpp  tcicov.cpp
test/: CMakeLists.txt  test_fact.cpp  test_sqrt.cpp
